--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,10 @@
 			<scope>test</scope>
 		</dependency>
 	
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-starter-security</artifactId> -->
+<!-- 		</dependency> -->
 		
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -59,7 +59,6 @@
 		<dependency>
 		    <groupId>joda-time</groupId>
 		    <artifactId>joda-time</artifactId>
-		    <version>2.9.9</version>
 		</dependency>
 	</dependencies>
 
