--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>3.0.3</version>
+			<scope>test</scope>
+		</dependency>
 	
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.springframework.boot</groupId> -->
